welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:20: error: reassignment to val
			y=y+1
                         ^